--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </p>
   <p>dunque, l&rsquo;idea mi &eacute venuta quando trovai un vecchio pc (fisso) a 32bit che ci f&uacute regalato anni a dietro,
   </p>
-  <img src="images/IMG-20240428-WA0011.jpeg"
+  <img src="IMG-20240428-WA0011.jpeg"
     align="center" width="200" height="400" alt="image of the PC">
   <dl>
      <dt>Marchio PC</dt>
